Implement REST layer

--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,13 @@ group = 'com.amazingco'
 sourceCompatibility = '1.12'
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'
+    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
